# website

./: .gitignore  .travis.yml  Caddyfile  Gemfile  LICENSE  README  Rakefile  _config.yml  feed.xml  index.html  pniedzielski-net.cabal  pniedzielski-net.hs  pniedzielski.asc  stack.yaml
2016/09/: cppcon-panel.html  cppcon-talk.html
2017/04/: culc-talk.html  curb-poster.html
2017/05/: humanities-poster.html  thesis.html
2017/11/: ilurs-poster.html
2018/03/: aos-talk.html
2019/10/: morphun.html
_posts/: 2019-05-31-welcome-to-jekyll.markdown
css/: styles.css
templates/: default.html
