name:               pniedzielski-net
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable pniedzielski-net
  main-is:          pniedzielski-net.hs
  build-depends:    base == 4.*
                  , hakyll >= 4.16.8
                  , wai-app-static
                  , base-unicode-symbols
                  , filepath
                  , bytestring
  ghc-options:      -threaded
  default-language: Haskell2010
