cabal-version:      3.12
name:               pniedzielski-net
version:            0.1.0.0
build-type:         Simple

executable pniedzielski-net
  main-is:          pniedzielski-net.hs
  build-depends:    base == 4.*
                  , hakyll >= 4.16.8
                  , wai-app-static
                  , filepath
                  , bytestring
  default-extensions: OverloadedStrings
  ghc-options:      -threaded
                    -Wall
                    -Wcompat
                    -Wcpp-undef
                    -Widentities
                    -Wincomplete-record-updates
                    -Wincomplete-uni-patterns
                    -Wmissing-deriving-strategies
                    -Wmissing-export-lists
                    -Wmissing-home-modules
                    -Wnoncanonical-monad-instances
                    -Wpartial-fields
                    -Wredundant-constraints
                    -Wtabs
  default-language: GHC2024
